tests/NormalTests/paczka1/small_fuzzy/40945635.err
Error in line 2: RhpKOp4mLl S351 41,5
Error in line 8: RhKO4mLl S637 6,2
Error in line 9: A152 S351 90,9
Error in line 12: A152 S637 92,5
Error in line 6: vuhTYrdybP S637 42,4
